tests/baselines/reference/indexSignatureTypeCheck.errors.txt
==== tests/cases/compiler/indexSignatureTypeCheck.ts (8 errors) ====
    interface IPropertySet {
    
        [index: string]: any;
    
    }
    
    
    var ps: IPropertySet = null;
    var index: any = "hello";
    ps[index] = 12;
    
    
    interface indexErrors {
        [p2?: string];
        [...p3: any[]];
        [p4: string, p5?: string];
                   ~
!!! error TS1005: ']' expected.
                                ~
!!! error TS1005: ';' expected.
                                 ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
        ~~~~~~~~~~~
!!! error TS2232: Duplicate string index signature.
        [p6: string, ...p7: any[]];
                   ~
!!! error TS1005: ']' expected.
                     ~~~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
                                 ~
!!! error TS1005: ';' expected.
                                  ~
!!! error TS1008: Unexpected token; 'call, construct, index, property or function signature' expected.
    }